--- a/index.html
+++ b/index.html
@@ -85,7 +85,15 @@
                                 <label class="form-label">vDefend Cost per Core ($)</label>
                                 <input type="number" class="form-input" id="vmwareCostPerCore" value="85" min="10" step="5">
                                 <div class="helper-text">Single solution for IDS/IPS, ATP & NDR</div>
+
+                                <label class="form-label">Coverage uplift (%)</label>
+                                <input type="number" class="form-input" id="coverageUplift" value="67" min="0" max="300" step="1">
+                                <div class="helper-text">Expected coverage increase with VCF/vDefend</div>
                             </div>
+
+
+
+
                             <div class="form-group">
                                 <label class="form-label">Current Security Coverage (%)</label>
                                 <input type="number" class="form-input" id="currentSecurityCoverage" value="40" min="0" max="100" step="5">
